Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -39,13 +39,13 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .layer-2 {
-    background: #eee;
+    background: #fdec6f;
 }
 .layer-3 {
     background: #ccc;
 }
 .layer-5 {
-    background: #ccc;
+    background: #efefef;
 }
 .layer-6 {
     background: #111;
