--- a/css/app.css
+++ b/css/app.css
@@ -42,7 +42,7 @@ h1,h2,h3,h4,h5,h6 {
     background: #fdec6f;
 }
 .layer-3 {
-    background: #ccc;
+    background: #efefef;
 }
 .layer-5 {
     background: #efefef;
