--- a/css/app.css
+++ b/css/app.css
@@ -24,6 +24,7 @@ p {
 
 h1,h2,h3,h4,h5,h6 {
   font-family: 'Oswald', sans-serif;
+  font-family: 'Racing Sans One', sans-serif;
 }
 .callout {
     border: 0;
