Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 	
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+	<link href="https://fonts.googleapis.com/css?family=Racing+Sans+One" rel="stylesheet">
 	
 	<!--[if lt IE 9]>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
