Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,10 @@
 	<body>
 	    
 	    <div class="main-wrapper">
+	        
+	        <section class="header">
+	            <img src="{{ site.baseurl }}/images/logo.png"
+	        </section>
     		
     		<!--[if lt IE 10]>
             <div class="my-ie-rant hide-for-print">
