Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 	    <div class="main-wrapper">
 	        
 	        <section class="header">
-	            <img src="{{ site.baseurl }}/images/logo.png"
+	            <img src="{{ site.baseurl }}/images/logo.png" alt="{{ site.title }}" />
 	        </section>
     		
     		<!--[if lt IE 10]>
