Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -31,7 +31,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .masthead {
-    background: #eee url('../images/chrome-bgd.gif') no-repeat center center;
+    background: #eee url('../images/chrome-bgd.jpg') no-repeat center center;
     background-size: 100%;
 }
 
