--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
 	    
 	    <div class="main-wrapper">
 	        
-	        <section class="header text-center">
+	        <section class="masthead text-center">
 	            <img src="{{ site.baseurl }}/images/logo.png" alt="{{ site.title }}" />
 	        </section>
     		
