--- a/css/app.css
+++ b/css/app.css
@@ -33,6 +33,7 @@ h1,h2,h3,h4,h5,h6 {
 .masthead {
     background: #eee url('../images/chrome-bgd.jpg') no-repeat center center;
     background-size: 100%;
+    padding: 20px 0;
 }
 
 .layer-1,
