--- a/css/app.css
+++ b/css/app.css
@@ -26,6 +26,9 @@ h1,h2,h3,h4,h5,h6 {
   font-family: 'Oswald', sans-serif;
   font-family: 'Racing Sans One', sans-serif;
 }
+h1 {
+    font-size: 3.2rem;
+}
 .callout {
     border: 0;
 }
