--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/font-awesome.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/print.css" />
 	<link rel="stylesheet" href="{{ site.baseurl }}/css/ie.css" />
+	<link rel="stylesheet" href="{{ site.baseurl }}/css/image-lightbox.css" />
 	
 	<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
