Updated '_layouts/default.html' via CloudCannon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,9 @@
 		<script src="{{ site.baseurl }}/js/vendor/foundation.js"></script>
 		<script src="{{ site.baseurl }}/js/app.js"></script>
 		<script src="{{ site.baseurl }}/js/misc.js"></script>
+		
+		<script src="{{ site.baseurl }}/js/lightbox/imagelightbox.js"></script>
+	    <script src="{{ site.baseurl }}/js/lightbox/imagelightbox-init.js"></script>
 		<!--<![endif]-->
 	
 	    <!-- Modernizer is pulled in here rather than head. Otherwise get FOUC when it removes the no-js class from the html tag -->
