Updated 'css/app.css' via CloudCannon

--- a/css/app.css
+++ b/css/app.css
@@ -29,6 +29,7 @@ h1,h2,h3,h4,h5,h6 {
 
 blockquote, blockquote p {
     color: #777;
+    font-style: italic;
 }
 blockquote {
     border-left: 3px solid #cacaca;
