--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,13 @@ blockquote, blockquote p {
 blockquote {
     border-left: 3px solid #cacaca;
 }
+.mission-statement {
+    padding: 20px;
+    background: #333;
+}
+.mission-statement * {
+   color: #fff;
+}
 
 .callout {
     border: 0;
